--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,11 +2,11 @@ name: Release
 
 on:
   push:
-    branches: ["main"]
+    tags: ["v*"]
   workflow_dispatch:
     inputs:
-      version:
-        description: "Release version (e.g. 1.0.0)"
+      tag:
+        description: "Tag to release (e.g. v1.0.0, v1.0.0-rc.1)"
         required: true
         type: string
 
@@ -17,7 +17,6 @@ jobs:
   build_packages:
     name: Build packages (${{ matrix.os }})
     runs-on: ${{ matrix.os }}
-    if: github.event_name == 'workflow_dispatch' || startsWith(github.event.head_commit.message, 'release:')
     strategy:
       fail-fast: false
       matrix:
@@ -28,6 +27,28 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          ref: ${{ github.event_name == 'workflow_dispatch' && inputs.tag || github.ref }}
+
+      - name: Determine version
+        id: ver
+        shell: bash
+        run: |
+          set -euo pipefail
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+            TAG="${{ inputs.tag }}"
+          else
+            TAG="${GITHUB_REF_NAME}"
+          fi
+
+          TAG="${TAG## }"
+          TAG="${TAG%% }"
+          if [[ "${TAG}" != v* ]]; then
+            TAG="v${TAG}"
+          fi
+
+          VERSION="${TAG#v}"
+          echo "tag=${TAG}" >> "$GITHUB_OUTPUT"
+          echo "version=${VERSION}" >> "$GITHUB_OUTPUT"
 
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
@@ -43,10 +64,10 @@ jobs:
         run: cargo test --all
 
       - name: Build (debug)
-        run: cargo build --locked
+        run: cargo build --profile dev --locked
 
       - name: Build (release)
-        run: cargo build --release --locked
+        run: cargo build --profile release --locked
 
       - name: Format check
         run: cargo fmt --all -- --check
@@ -63,89 +84,198 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
-          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
-            VERSION="${{ inputs.version }}"
-          else
-            MSG="${{ github.event.head_commit.message }}"
-            FIRST_LINE="${MSG%%$'\n'*}"
-            VERSION="${FIRST_LINE#release:}"
-            VERSION="${VERSION## }"
-            VERSION="${VERSION%% }"
-            if [ -z "$VERSION" ] || [ "$VERSION" = "$FIRST_LINE" ]; then
-              echo "Invalid release commit message. Expected: release: X.Y" >&2
-              exit 1
-            fi
-          fi
+          VERSION="${{ steps.ver.outputs.version }}"
 
           TARGET="$(rustc -vV | sed -n 's/^host: //p')"
+          case "${TARGET}" in
+            x86_64-unknown-linux-gnu) PLATFORM="linux-amd64";;
+            aarch64-unknown-linux-gnu) PLATFORM="linux-arm64";;
+            x86_64-apple-darwin) PLATFORM="macos-amd64";;
+            aarch64-apple-darwin) PLATFORM="macos-arm64";;
+            aarch64-linux-android) PLATFORM="android-aarch64";;
+            *) PLATFORM="${TARGET}";;
+          esac
+
           OUTDIR="dist/cosmostrix-${VERSION}-${TARGET}"
           mkdir -p "$OUTDIR"
           cp -f "target/release/cosmostrix" "$OUTDIR/"
           cp -f "README.md" "$OUTDIR/"
           cp -f "LICENSE" "$OUTDIR/"
 
-          XZ_OPT=-9e tar -cJf "dist/cosmostrix-${VERSION}-${TARGET}.tar.xz" -C dist "cosmostrix-${VERSION}-${TARGET}"
+          TARBALL="cosmostrix-bin-${PLATFORM}.tar.xz"
+          XZ_OPT=-9e tar -cJf "dist/${TARBALL}" -C dist "cosmostrix-${VERSION}-${TARGET}"
+
+          (
+            cd dist
+            if command -v sha512sum >/dev/null 2>&1; then
+              sha512sum "${TARBALL}" > "${TARBALL}.sha512"
+            else
+              shasum -a 512 "${TARBALL}" > "${TARBALL}.sha512"
+            fi
+          )
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: packages-${{ matrix.os }}
-          path: dist/*.tar.xz
+          path: dist/*.tar.xz*
           if-no-files-found: error
 
-  publish_release:
-    name: Publish GitHub Release
+  build_android:
+    name: Build packages (android-aarch64)
     runs-on: ubuntu-latest
-    needs: build_packages
-    if: github.event_name == 'workflow_dispatch' || startsWith(github.event.head_commit.message, 'release:')
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          ref: ${{ github.event_name == 'workflow_dispatch' && inputs.tag || github.ref }}
+
+      - name: Determine version
+        id: ver
+        shell: bash
+        run: |
+          set -euo pipefail
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+            TAG="${{ inputs.tag }}"
+          else
+            TAG="${GITHUB_REF_NAME}"
+          fi
+
+          TAG="${TAG## }"
+          TAG="${TAG%% }"
+          if [[ "${TAG}" != v* ]]; then
+            TAG="v${TAG}"
+          fi
+
+          VERSION="${TAG#v}"
+          echo "tag=${TAG}" >> "$GITHUB_OUTPUT"
+          echo "version=${VERSION}" >> "$GITHUB_OUTPUT"
+
+      - name: Install Rust toolchain
+        uses: dtolnay/rust-toolchain@stable
+
+      - name: Setup Java
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: "17"
+
+      - name: Setup Android NDK
+        id: ndk
+        uses: nttld/setup-ndk@v1
+        with:
+          ndk-version: r26d
+
+      - name: Add Rust target
+        run: rustup target add aarch64-linux-android
+
+      - name: Build (release, android-aarch64)
+        shell: bash
+        env:
+          ANDROID_NDK_HOME: ${{ steps.ndk.outputs.ndk-path }}
+        run: |
+          set -euo pipefail
+          TARGET="aarch64-linux-android"
+
+          TOOLCHAIN="${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64"
+          export CC_aarch64_linux_android="${TOOLCHAIN}/bin/aarch64-linux-android21-clang"
+          export CARGO_TARGET_AARCH64_LINUX_ANDROID_LINKER="${CC_aarch64_linux_android}"
+
+          cargo build --profile release --locked --target "${TARGET}"
+
+      - name: Package (.tar.xz)
+        shell: bash
+        run: |
+          set -euo pipefail
+          VERSION="${{ steps.ver.outputs.version }}"
+          TARGET="aarch64-linux-android"
+          PLATFORM="android-aarch64"
+
+          OUTDIR="dist/cosmostrix-${VERSION}-${TARGET}"
+          mkdir -p "$OUTDIR"
+          cp -f "target/${TARGET}/release/cosmostrix" "$OUTDIR/"
+          cp -f "README.md" "$OUTDIR/"
+          cp -f "LICENSE" "$OUTDIR/"
+
+          TARBALL="cosmostrix-bin-${PLATFORM}.tar.xz"
+          XZ_OPT=-9e tar -cJf "dist/${TARBALL}" -C dist "cosmostrix-${VERSION}-${TARGET}"
+
+          (
+            cd dist
+            if command -v sha512sum >/dev/null 2>&1; then
+              sha512sum "${TARBALL}" > "${TARBALL}.sha512"
+            else
+              shasum -a 512 "${TARBALL}" > "${TARBALL}.sha512"
+            fi
+          )
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: packages-android-aarch64
+          path: dist/*.tar.xz*
+          if-no-files-found: error
+
+  publish_release:
+    name: Publish GitHub Release
+    runs-on: ubuntu-latest
+    needs: [build_packages, build_android]
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          ref: ${{ github.event_name == 'workflow_dispatch' && inputs.tag || github.ref }}
+
+      - name: Determine version
+        id: ver
+        shell: bash
+        run: |
+          set -euo pipefail
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+            TAG="${{ inputs.tag }}"
+          else
+            TAG="${GITHUB_REF_NAME}"
+          fi
+
+          TAG="${TAG## }"
+          TAG="${TAG%% }"
+          if [[ "${TAG}" != v* ]]; then
+            TAG="v${TAG}"
+          fi
+
+          VERSION="${TAG#v}"
+          if [[ "${VERSION}" == *-* ]]; then
+            PRE="true"
+          else
+            PRE="false"
+          fi
+
+          echo "tag=${TAG}" >> "$GITHUB_OUTPUT"
+          echo "version=${VERSION}" >> "$GITHUB_OUTPUT"
+          echo "prerelease=${PRE}" >> "$GITHUB_OUTPUT"
 
       - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
           path: dist
 
-      - name: Prepare tag + release notes
+      - name: Prepare release notes
         id: prep
         shell: bash
         run: |
           set -euo pipefail
-          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
-            VERSION="${{ inputs.version }}"
-          else
-            MSG="${{ github.event.head_commit.message }}"
-            FIRST_LINE="${MSG%%$'\n'*}"
-            VERSION="${FIRST_LINE#release:}"
-            VERSION="${VERSION## }"
-            VERSION="${VERSION%% }"
-          fi
-          TAG="v${VERSION}"
-
-          if [ -z "$VERSION" ]; then
-            echo "Missing version" >&2
-            exit 1
-          fi
-
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-
-          if git rev-parse "$TAG" >/dev/null 2>&1; then
-            echo "Tag already exists: $TAG" >&2
-          else
-            git tag -a "$TAG" -m "$TAG"
-            git push origin "$TAG"
-          fi
+          TAG="${{ steps.ver.outputs.tag }}"
+          VERSION="${{ steps.ver.outputs.version }}"
 
           PREV_TAG=$(git tag --list 'v*' --sort=-creatordate | grep -v "^${TAG}$" | head -n 1 || true)
           if [ -n "$PREV_TAG" ]; then
-            RANGE="${PREV_TAG}..HEAD"
+            RANGE="${PREV_TAG}..${TAG}"
           else
-            RANGE="HEAD"
+            RANGE="${TAG}"
           fi
 
           {
@@ -155,8 +285,8 @@ jobs:
             echo
           } > release-notes.md
 
-          echo "tag=$TAG" >> "$GITHUB_OUTPUT"
-          echo "version=$VERSION" >> "$GITHUB_OUTPUT"
+          echo "tag=${TAG}" >> "$GITHUB_OUTPUT"
+          echo "version=${VERSION}" >> "$GITHUB_OUTPUT"
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
@@ -164,7 +294,8 @@ jobs:
           tag_name: ${{ steps.prep.outputs.tag }}
           name: cosmostrix ${{ steps.prep.outputs.version }}
           draft: false
-          prerelease: false
+          prerelease: ${{ steps.ver.outputs.prerelease }}
           body_path: release-notes.md
           files: |
             dist/**/**/*.tar.xz
+            dist/**/**/*.tar.xz.sha512
