--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "cosmostrix"
-version = "0.1.0"
+version = "1.0.1"
 edition = "2021"
+rust-version = "1.81"
 authors = ["rezk_nightky"]
 description = "Terminal Matrix rain effect in Rust"
 license = "MIT"
@@ -11,14 +12,28 @@ clap = { version = "4.5.23", features = ["derive"] }
 crossterm = "0.29.0"
 rand = "0.9.2"
 
+[profile.dev]
+opt-level = 0
+debug = true
+split-debuginfo = "unpacked"
+incremental = true
+codegen-units = 256
+
 [profile.release]
 opt-level = 3
+debug = false
+strip = true
 lto = "fat"
 codegen-units = 1
-panic = "unwind"
-strip = "symbols"
+panic = "abort"
+overflow-checks = false
 
 [profile.release-with-debug]
 inherits = "release"
 debug = true
-strip = "none"
+strip = false
+
+[profile.bench]
+inherits = "release"
+debug = true
+overflow-checks = false
