--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,12 +3,6 @@ name: Release
 on:
   push:
     tags: ["v*"]
-  workflow_dispatch:
-    inputs:
-      tag:
-        description: "Tag to release (e.g. v1.0.0, v1.0.0-rc.1)"
-        required: true
-        type: string
 
 permissions:
   contents: write
@@ -27,18 +21,13 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ github.event_name == 'workflow_dispatch' && inputs.tag || github.ref }}
 
       - name: Determine version
         id: ver
         shell: bash
         run: |
           set -euo pipefail
-          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
-            TAG="${{ inputs.tag }}"
-          else
-            TAG="${GITHUB_REF_NAME}"
-          fi
+          TAG="${GITHUB_REF_NAME}"
 
           TAG="${TAG## }"
           TAG="${TAG%% }"
@@ -67,7 +56,7 @@ jobs:
           cargo +stable audit
 
       - name: Tests
-        run: cargo test --all
+        run: cargo test --all --locked
 
       - name: Build (debug)
         run: cargo build --profile dev --locked
@@ -84,7 +73,7 @@ jobs:
           cargo +stable deny check all
 
       - name: Clippy
-        run: cargo clippy --all-targets --all-features -- -D warnings
+        run: cargo clippy --locked --all-targets --all-features -- -D warnings
 
       - name: Package (.tar.xz)
         shell: bash
@@ -136,18 +125,13 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ github.event_name == 'workflow_dispatch' && inputs.tag || github.ref }}
 
       - name: Determine version
         id: ver
         shell: bash
         run: |
           set -euo pipefail
-          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
-            TAG="${{ inputs.tag }}"
-          else
-            TAG="${GITHUB_REF_NAME}"
-          fi
+          TAG="${GITHUB_REF_NAME}"
 
           TAG="${TAG## }"
           TAG="${TAG%% }"
@@ -236,18 +220,13 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ github.event_name == 'workflow_dispatch' && inputs.tag || github.ref }}
 
       - name: Determine version
         id: ver
         shell: bash
         run: |
           set -euo pipefail
-          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
-            TAG="${{ inputs.tag }}"
-          else
-            TAG="${GITHUB_REF_NAME}"
-          fi
+          TAG="${GITHUB_REF_NAME}"
 
           TAG="${TAG## }"
           TAG="${TAG%% }"
@@ -256,10 +235,13 @@ jobs:
           fi
 
           VERSION="${TAG#v}"
+          PRE="false"
           if [[ "${VERSION}" == *-* ]]; then
-            PRE="true"
-          else
-            PRE="false"
+            SUFFIX="${VERSION#*-}"
+            case "${SUFFIX}" in
+              stable.*) PRE="false";;
+              *) PRE="true";;
+            esac
           fi
 
           echo "tag=${TAG}" >> "$GITHUB_OUTPUT"
@@ -303,6 +285,7 @@ jobs:
           name: cosmostrix ${{ steps.prep.outputs.version }}
           draft: false
           prerelease: ${{ steps.ver.outputs.prerelease }}
+          make_latest: ${{ steps.ver.outputs.prerelease != 'true' }}
           body_path: release-notes.md
           files: |
             dist/**/**/*.tar.xz
