chore: lots of enhance,bug fix,new monitoring perf stability when glitch/high density

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,16 @@ codegen-units = 1
 panic = "abort"
 overflow-checks = false
 
+[profile.pro]
+inherits = "release"
+opt-level = 3
+debug = false
+strip = true
+lto = "fat"
+codegen-units = 1
+panic = "abort"
+overflow-checks = false
+
 [profile.release-with-debug]
 inherits = "release"
 debug = true
