--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,12 @@ license = "MIT"
 clap = { version = "4.5.23", features = ["derive"] }
 crossterm = "0.29.0"
 rand = "0.9.2"
+
+[target.'cfg(unix)'.dependencies]
 signal-hook = "0.3.17"
+
+[target.'cfg(windows)'.dependencies]
+ctrlc = "3.4.5"
 
 [profile.dev]
 opt-level = 0
